grafana/templates/preInstall.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  annotations:
    "helm.sh/hook": pre-install
