grafana/templates/ingressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: grafana
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: "Host(`grafana.example.com`)"
      priority: 10
      services:
        - name: graafana
          port: 80
